--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "bubu",
+  "name": "bubu-restifier",
   "version": "1.0.0",
   "description": "Javascript RESTful styled API client. Follows modularity.",
-  "main": "bubu.js",
+  "main": "bubu-restifier.js",
   "scripts": {
     "test": "NODE_ENV=test mocha"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/aukan/bubu.git"
+    "url": "https://github.com/aukan/bubu-restifier.git"
   },
   "keywords": [
     "rest",
@@ -22,9 +22,9 @@
   "author": "Pablo Gonzalez",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/aukan/bubu/issues"
+    "url": "https://github.com/aukan/bubu-restifier/issues"
   },
-  "homepage": "https://github.com/aukan/bubu",
+  "homepage": "https://github.com/aukan/bubu-restifier",
   "devDependencies": {
     "assert": "^1.3.0"
   }
