--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "description": "RESTful styled API client augmenter. Follows modularity. Works with browserify.",
   "main": "bubu-restifier.js",
-  "scripts": {
-    "test": "NODE_ENV=test mocha"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/aukan/bubu-restifier.git"
@@ -28,6 +25,19 @@
   },
   "homepage": "https://github.com/aukan/bubu-restifier",
   "devDependencies": {
-    "assert": "^1.3.0"
+    "assert": "^1.3.0",
+    "mocha": "^2.1.0"
+  },
+  "testling": {
+    "harness": "mocha-bdd",
+    "files": "test/*.js",
+    "browsers": [
+      "ie/8..latest",
+      "chrome/latest",
+      "firefox/latest"
+    ]
+  },
+  "scripts": {
+    "test": "mocha --ui tdd"
   }
 }
